--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>discovery-service</module>
         <module>account-service</module>
+        <module>user-service</module>
     </modules>
     <packaging>pom</packaging>
 
