--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>discovery-service</module>
         <module>account-service</module>
         <module>user-service</module>
+        <module>edge-service</module>
     </modules>
     <packaging>pom</packaging>
 
