--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     </parent>
 
     <properties>
+        <java.version>1.8</java.version>
         <swagger.version>2.6.1</swagger.version>
     </properties>
 
