--- a/account-service/src/main/resources/application.yml
+++ b/account-service/src/main/resources/application.yml
@@ -4,3 +4,7 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8500/eureka/
+spring:
+  sleuth:
+    sampler:
+      percentage: 1.0
