--- a/edge-service/src/main/resources/application.yml
+++ b/edge-service/src/main/resources/application.yml
@@ -16,3 +16,7 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8500/eureka/
+spring:
+  sleuth:
+    sampler:
+      percentage: 1.0
