--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -5,3 +5,8 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8500/eureka/
+
+spring:
+  sleuth:
+    sampler:
+      percentage: 1.0
